[metadata]
name = quart-redis
version = 0.1.0
author = Leo Spratt
description = A easy way of setting up a redis in quart
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enchant97/quart-redis
license = MIT
keywords = quart redis aioredis cache
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = quart_redis
python_requires = >=3.7
install_requires =
    quart >= 0.14.1
    aioredis >= 1.3.1
