[metadata]
name = quart-redis
version = attr: quart_redis.__version__
author = Leo Spratt
description = A easy way of setting up a redis in quart
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enchant97/quart-redis
project_urls =
    Documentation = https://quart-redis.readthedocs.io/en/latest/
    Change Log = https://github.com/enchant97/quart-redis/blob/master/CHANGELOG.md
license = MIT
keywords = quart redis aioredis cache
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
install_requires =
    quart ~= 0.16
    redis >= 4.2, < 5
